--- a/article.html
+++ b/article.html
@@ -8,196 +8,7 @@
     <meta name="keywords" content="trusting AI, collective wisdom, artificial intelligence, human knowledge, diversity, unity, empathy, innovation, technology, AI benefits">
     <meta name="author" content="Nicolas Zapater-Lamadrid">
     <link rel="canonical" href="https://www.straightupnews.com/trusting-ai-harnessing-collective-wisdom">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        nav {
-            background-color: #0056b3;
-            color: #fff;
-            padding: 20px 0;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        nav ul li {
-            margin: 0 20px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-        }
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #fff;
-            margin-right: 30px;
-        }
-        .logo a {
-            color: #fff;
-            text-decoration: none;
-        }
-        .main-content {
-            display: flex;
-            flex-wrap: wrap;
-            max-width: 1200px;
-            margin: 50px auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        .container {
-            flex: 1 1 0;
-            padding-right: 20px;
-        }
-        .sidebar {
-            flex: 0 0 300px;
-            padding-left: 20px;
-        }
-        .sidebar section {
-            margin-bottom: 20px;
-        }
-        .sidebar .about,
-        .sidebar .advertisement,
-        .sidebar .subscribe {
-            background-color: #f7f9fc;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
-        .sidebar .advertisement img {
-            display: block;
-            max-width: 100%;
-            height: auto;
-            margin: 0 auto;
-        }
-        .sidebar .subscribe input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 4px;
-        }
-        .sidebar .subscribe button {
-            background-color: #004494;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-        .footer {
-            background-color: #0056b3;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
-        }
-        .footer a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        h1, h2 {
-            color: #0056b3;
-        }
-        h1 {
-            border-bottom: 2px solid #0056b3;
-            padding-bottom: 10px;
-        }
-        p {
-            line-height: 1.6;
-        }
-        .headline {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-        .restoration-conditions {
-            margin-top: 20px;
-        }
-        .restoration-conditions ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .restoration-conditions li {
-            background-color: #e7f1ff;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-left: 5px solid #0056b3;
-        }
-        .social-buttons {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .social-buttons button {
-            background-color: #0056b3;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            margin: 5px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .social-buttons button:hover {
-            background-color: #004494;
-        }
-        .seal {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .seal img {
-            width: 150px;
-        }
-        .seal p {
-            font-weight: bold;
-            margin-top: 10px;
-        }
-        .article-image {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .article-image img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        .article-info {
-            font-size: 0.9em;
-            color: #777;
-            margin-bottom: 20px;
-        }
-        @media(max-width: 768px) {
-            .main-content {
-                flex-direction: column;
-            }
-            .container {
-                width: 100%;
-                padding-right: 0;
-            }
-            .sidebar {
-                width: 100%;
-                padding-left: 0;
-                margin-top: 20px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
