--- a/article.html
+++ b/article.html
@@ -15,9 +15,21 @@
         <ul>
             <li class="logo"><a href="index.html">Straight-Up</a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Facts</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Categories</a>
+                <div class="dropdown-content">
+                    <a href="politics.html">Politics</a>
+                    <a href="law.html">Law</a>
+                    <a href="technology.html">Technology</a>
+                    <a href="news.html">News</a>
+                    <a href="diversity.html">Diversity</a>
+                    <a href="change.html">Change</a>
+                </div>
+            </li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="terms.html">Terms</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="rules.html">Rules</a></li>
         </ul>
     </nav>
     <div class="main-content">
@@ -99,9 +111,9 @@
     <div class="footer">
         <p>&copy; 2024 Straight-Up News. All rights reserved.</p>
         <p>
-            <a href="#">Privacy Policy</a> |
-            <a href="#">Terms of Service</a> |
-            <a href="#">Contact Us</a>
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="terms.html">Terms of Service</a> |
+            <a href="contact.html">Contact Us</a>
         </p>
     </div>
 
