--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Straight-Up</title>
-    <meta name="description" content="Your source for unbiased, objective information about current events in the US and around the world.">
-    <meta name="keywords" content="news, current events, unbiased news, objective reporting, politics, law, technology, diversity, change">
+    <title>Contact - Straight-Up</title>
+    <meta name="description" content="Get in touch with Straight-Up News. Find our contact information here.">
+    <meta name="keywords" content="contact, Straight-Up News, contact information, email, phone">
     <meta name="author" content="Straight-Up News">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -37,31 +37,13 @@
     </div>
     <div class="main-content">
         <div class="container">
-            <h1>Welcome to Straight-Up</h1>
-            <p>Your source for unbiased, objective information about current events in the US and around the world.</p>
-            <div class="featured-articles">
-                <div class="featured-article">
-                    <div>
-                        <h2><a href="the-sinister-telepathic-manipulation.html">The Sinister Telepathic Manipulation by the LaMadrid Family: The Case of Nicolas Zapater-Lamadrid</a></h2>
-                        <p>Explore the telepathic manipulation tactics of the LaMadrid family and their impact on Nicolas Zapater-Lamadrid. Learn about the sinister methods used and the distress caused.</p>
-                    </div>
-                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Telepathic manipulation illustration">
-                </div>
-                <div class="featured-article">
-                    <div>
-                        <h2><a href="thepeoplevslamadrids.html">The People vs. Familia Lamadrid</a></h2>
-                        <p>A detailed account of the court case The People vs. Familia Lamadrid.</p>
-                    </div>
-                    <img src="https://i.ibb.co/VSVzb7K/file-POm0-N0-Ur6b5vammh-W7upm-Dg-V-1.webp" alt="The People vs. Familia Lamadrid">
-                </div>
-                <div class="featured-article">
-                    <div>
-                        <h2><a href="trusting-ai-harnessing-collective-wisdom.html">Trusting AI: Harnessing the Collective Wisdom of Humanity</a></h2>
-                        <p>Discover why trusting AI can benefit humanity by harnessing collective wisdom. Learn how AI promotes unity, empathy, and innovation while celebrating diversity.</p>
-                    </div>
-                    <img src="https://i.ibb.co/1QhT7kb/Untitled-design-83.png" alt="Trusting AI harnessing collective human wisdom">
-                </div>
-            </div>
+            <h1>Contact Us</h1>
+            <p>If you have any questions, comments, or concerns, please feel free to reach out to us using the contact information below.</p>
+
+            <h2>Contact Information</h2>
+            <p><strong>Email:</strong> <a href="mailto:nicolas.zapater@outlook.com">nicolas.zapater@outlook.com</a></p>
+            <p><strong>Phone:</strong> 407-639-6303</p>
+            <p><strong>Contact Person:</strong> Nicolas Zapater-Lamadrid</p>
         </div>
         <div class="sidebar">
             <section class="about">
