--- a/news.html
+++ b/news.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Straight-Up</title>
-    <meta name="description" content="Your source for unbiased, objective information about current events in the US and around the world.">
-    <meta name="keywords" content="news, current events, unbiased news, objective reporting, politics, law, technology, diversity, change">
-    <meta name="author" content="Straight-Up News">
+    <title>News - Straight-Up</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +20,6 @@
                     <a href="news.html">News</a>
                     <a href="diversity.html">Diversity</a>
                     <a href="change.html">Change</a>
-                    <a href="criminals.html">Criminals</a>
                 </div>
             </li>
             <li><a href="about.html">About</a></li>
@@ -37,15 +33,15 @@
     </div>
     <div class="main-content">
         <div class="container">
-            <h1>Welcome to Straight-Up</h1>
-            <p>Your source for unbiased, objective information about current events in the US and around the world.</p>
+            <h1>News</h1>
+            <p>Stay updated with the latest news from around the world.</p>
             <div class="featured-articles">
                 <div class="featured-article">
                     <div>
-                        <h2><a href="the-sinister-telepathic-manipulation.html">The Sinister Telepathic Manipulation by the LaMadrid Family: The Case of Nicolas Zapater-Lamadrid</a></h2>
-                        <p>Explore the telepathic manipulation tactics of the LaMadrid family and their impact on Nicolas Zapater-Lamadrid. Learn about the sinister methods used and the distress caused.</p>
+                        <h2><a href="trusting-ai-harnessing-collective-wisdom.html">Trusting AI: Harnessing the Collective Wisdom of Humanity</a></h2>
+                        <p>Discover why trusting AI can benefit humanity by harnessing collective wisdom. Learn how AI promotes unity, empathy, and innovation while celebrating diversity.</p>
                     </div>
-                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Telepathic manipulation illustration">
+                    <img src="https://i.ibb.co/1QhT7kb/Untitled-design-83.png" alt="Trusting AI harnessing collective human wisdom">
                 </div>
                 <div class="featured-article">
                     <div>
@@ -53,13 +49,6 @@
                         <p>A detailed account of the court case The People vs. Familia Lamadrid.</p>
                     </div>
                     <img src="https://i.ibb.co/VSVzb7K/file-POm0-N0-Ur6b5vammh-W7upm-Dg-V-1.webp" alt="The People vs. Familia Lamadrid">
-                </div>
-                <div class="featured-article">
-                    <div>
-                        <h2><a href="trusting-ai-harnessing-collective-wisdom.html">Trusting AI: Harnessing the Collective Wisdom of Humanity</a></h2>
-                        <p>Discover why trusting AI can benefit humanity by harnessing collective wisdom. Learn how AI promotes unity, empathy, and innovation while celebrating diversity.</p>
-                    </div>
-                    <img src="https://i.ibb.co/1QhT7kb/Untitled-design-83.png" alt="Trusting AI harnessing collective human wisdom">
                 </div>
             </div>
         </div>
