--- a/crime.html
+++ b/crime.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crime - Straight-Up</title>
+    <title>Criminals - Straight-Up</title>
     <meta name="description" content="Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.">
     <meta name="keywords" content="crime, criminal cases, crime news, criminal behavior, crime reports">
     <meta name="author" content="Straight-Up News">
@@ -37,7 +37,7 @@
     </div>
     <div class="main-content">
         <div class="container">
-            <h1>Crime</h1>
+            <h1>Criminals</h1>
             <p>Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.</p>
             <div class="featured-articles">
                 <div class="featured-article">
@@ -46,6 +46,13 @@
                         <p>Explore the telepathic manipulation tactics of the LaMadrid family and their impact on Nicolas Zapater-Lamadrid. Learn about the sinister methods used and the distress caused.</p>
                     </div>
                     <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Telepathic manipulation illustration">
+                </div>
+                <div class="featured-article">
+                    <div>
+                        <h2><a href="modusoperandi.html">The Modus Operandi of the Lamadrid Family: A Case Study in Psychological Manipulation and Torture</a></h2>
+                        <p>Explore the sophisticated and cruel methods of psychological manipulation employed by the Lamadrid family against Nicolas Zapater-Lamadrid.</p>
+                    </div>
+                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Psychological manipulation illustration">
                 </div>
                 <div class="featured-article">
                     <div>
@@ -92,20 +99,5 @@
             <a href="contact.html">Contact Us</a>
         </p>
     </div>
-    <script>
-        function share(platform) {
-            let url = window.location.href;
-            let text = "The Sinister Telepathic Manipulation by the LaMadrid Family: The Case of Nicolas Zapater-Lamadrid. Read more at: ";
-            let fullUrl;
-            if (platform === 'facebook') {
-                fullUrl = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(url)}&quote=${encodeURIComponent(text)}`;
-            } else if (platform === 'twitter') {
-                fullUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(text + url)}`;
-            } else if (platform === 'linkedin') {
-                fullUrl = `https://www.linkedin.com/sharing/share-offsite/?url=${encodeURIComponent(url)}`;
-            }
-            window.open(fullUrl, '_blank');
-        }
-    </script>
 </body>
 </html>
