--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div class="container">
             <h1>Welcome to Straight-Up</h1>
             <p>Your source for unbiased, objective information about current events in the US and around the world.</p>
+            <p>At Straight-Up, we believe in the power of truth and transparency. Our dedicated team of journalists and editors work tirelessly to bring you the most accurate and up-to-date news, covering a wide range of topics including politics, law, technology, and more. We strive to provide a platform where facts speak louder than opinions, and where our readers can make informed decisions based on reliable information.</p>
+            <p>In a world filled with misinformation and bias, Straight-Up stands as a beacon of integrity. Our mission is to cut through the noise and deliver news that is not only factual but also presented in a clear and straightforward manner. Whether it's breaking news, in-depth analysis, or thought-provoking editorials, you can trust Straight-Up to keep you informed.</p>
+            <p>We are committed to fostering a community of informed citizens who value the truth. Join us on this journey and stay connected with the world through Straight-Up.</p>
             <div class="featured-articles">
                 <div class="featured-article">
                     <div>
@@ -46,6 +49,13 @@
                         <p>Explore the telepathic manipulation tactics of the LaMadrid family and their impact on Nicolas Zapater-Lamadrid. Learn about the sinister methods used and the distress caused.</p>
                     </div>
                     <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Telepathic manipulation illustration">
+                </div>
+                <div class="featured-article">
+                    <div>
+                        <h2><a href="modusoperandi.html">The Modus Operandi of the Lamadrid Family: A Case Study in Psychological Manipulation and Torture</a></h2>
+                        <p>Explore the sophisticated and cruel methods of psychological manipulation employed by the Lamadrid family against Nicolas Zapater-Lamadrid.</p>
+                    </div>
+                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Psychological manipulation illustration">
                 </div>
                 <div class="featured-article">
                     <div>
