--- a/crime.html
+++ b/crime.html
@@ -15,6 +15,26 @@
             <li class="logo"><a href="index.html">Straight-Up</a></li>
             <li><a href="index.html">Home</a></li>
             <li class="dropdown">
+                <a href="javascript:void(0)"Here is the updated `criminals.html` page with the new featured article included:
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Criminals - Straight-Up</title>
+    <meta name="description" content="Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.">
+    <meta name="keywords" content="crime, criminal cases, crime news, criminal behavior, crime reports">
+    <meta name="author" content="Straight-Up News">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li class="logo"><a href="index.html">Straight-Up</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Categories</a>
                 <div class="dropdown-content">
                     <a href="politics.html">Politics</a>
@@ -40,6 +60,13 @@
             <h1>Criminals</h1>
             <p>Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.</p>
             <div class="featured-articles">
+                <div class="featured-article">
+                    <div>
+                        <h2><a href="the-psychology-of-a-group.html">The Psychology of a Group that Manipulates and Tortures: A Study in Twisted Morality and Responsibility</a></h2>
+                        <p>Explore the psychological manipulation and torture tactics employed by a telepathic family, their distorted moral compass, and the impact on their victim.</p>
+                    </div>
+                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Psychological manipulation and torture illustration">
+                </div>
                 <div class="featured-article">
                     <div>
                         <h2><a href="the-sinister-telepathic-manipulation.html">The Sinister Telepathic Manipulation by the LaMadrid Family: The Case of Nicolas Zapater-Lamadrid</a></h2>
