--- a/law.html
+++ b/law.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Law - Straight-Up</title>
+    <title>Criminals - Straight-Up</title>
+    <meta name="description" content="Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.">
+    <meta name="keywords" content="crime, criminal cases, crime news, criminal behavior, crime reports">
+    <meta name="author" content="Straight-Up News">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,6 +23,7 @@
                     <a href="news.html">News</a>
                     <a href="diversity.html">Diversity</a>
                     <a href="change.html">Change</a>
+                    <a href="criminals.html">Criminals</a>
                 </div>
             </li>
             <li><a href="about.html">About</a></li>
@@ -33,15 +37,67 @@
     </div>
     <div class="main-content">
         <div class="container">
-            <h1>Law</h1>
-            <p>Get the latest updates on legal news and cases.</p>
+            <h1>Criminals</h1>
+            <p>Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.</p>
             <div class="featured-articles">
                 <div class="featured-article">
                     <div>
-                        <h2><a href="trusting-ai-harnessing-collective-wisdom.html">Trusting AI: Harnessing the Collective Wisdom of Humanity</a></h2>
-                        <p>Discover why trusting AI can benefit humanity by harnessing collective wisdom. Learn how AI promotes unity, empathy, and innovation while celebrating diversity.</p>
+                        <```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Criminals - Straight-Up</title>
+    <meta name="description" content="Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.">
+    <meta name="keywords" content="crime, criminal cases, crime news, criminal behavior, crime reports">
+    <meta name="author" content="Straight-Up News">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li class="logo"><a href="index.html">Straight-Up</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Categories</a>
+                <div class="dropdown-content">
+                    <a href="politics.html">Politics</a>
+                    <a href="law.html">Law</a>
+                    <a href="technology.html">Technology</a>
+                    <a href="news.html">News</a>
+                    <a href="diversity.html">Diversity</a>
+                    <a href="change.html">Change</a>
+                    <a href="criminals.html">Criminals</a>
+                </div>
+            </li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="terms.html">Terms</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="rules.html">Rules</a></li>
+        </ul>
+    </nav>
+    <div class="ad-banner">
+        <a href="https://ibb.co/TTgyQ05"><img src="https://i.ibb.co/n0LpX1S/Advertise-Your-1.png" alt="Advertise-Your-1" border="0"></a>
+    </div>
+    <div class="main-content">
+        <div class="container">
+            <h1>Criminals</h1>
+            <p>Explore crime news and stories, including detailed articles and updates on criminal cases. Stay informed with unbiased and objective reporting.</p>
+            <div class="featured-articles">
+                <div class="featured-article">
+                    <div>
+                        <h2><a href="the-sinister-telepathic-manipulation.html">The Sinister Telepathic Manipulation by the LaMadrid Family: The Case of Nicolas Zapater-Lamadrid</a></h2>
+                        <p>Explore the telepathic manipulation tactics of the LaMadrid family and their impact on Nicolas Zapater-Lamadrid. Learn about the sinister methods used and the distress caused.</p>
                     </div>
-                    <img src="https://i.ibb.co/1QhT7kb/Untitled-design-83.png" alt="Trusting AI harnessing collective human wisdom">
+                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Telepathic manipulation illustration">
+                </div>
+                <div class="featured-article">
+                    <div>
+                        <h2><a href="modusoperandi.html">The Modus Operandi of the Lamadrid Family: A Case Study in Psychological Manipulation and Torture</a></h2>
+                        <p>Explore the sophisticated and cruel methods of psychological manipulation employed by the Lamadrid family against Nicolas Zapater-Lamadrid.</p>
+                    </div>
+                    <img src="https://i.ibb.co/1zqqYqm/26169108-10213757595467986-1337586092283568427-n.jpg" alt="Psychological manipulation illustration">
                 </div>
                 <div class="featured-article">
                     <div>
@@ -49,6 +105,13 @@
                         <p>A detailed account of the court case The People vs. Familia Lamadrid.</p>
                     </div>
                     <img src="https://i.ibb.co/VSVzb7K/file-POm0-N0-Ur6b5vammh-W7upm-Dg-V-1.webp" alt="The People vs. Familia Lamadrid">
+                </div>
+                <div class="featured-article">
+                    <div>
+                        <h2><a href="trusting-ai-harnessing-collective-wisdom.html">Trusting AI: Harnessing the Collective Wisdom of Humanity</a></h2>
+                        <p>Discover why trusting AI can benefit humanity by harnessing collective wisdom. Learn how AI promotes unity, empathy, and innovation while celebrating diversity.</p>
+                    </div>
+                    <img src="https://i.ibb.co/1QhT7kb/Untitled-design-83.png" alt="Trusting AI harnessing collective human wisdom">
                 </div>
             </div>
         </div>
